--- a/analysis/TCGA_pathways.Rmd
+++ b/analysis/TCGA_pathways.Rmd
@@ -42,51 +42,9 @@ TCGA.full.subset = readRDS(here("data", "RDS", "TCGA", "signatures",
 
 TCGA.active.sig.counts = data.frame(Tissues = TCGA.full.subset.ann$Cancer.Types,
                                       active.sig.counts = rowSums(TCGA.full.subset.ann[4:ncol(TCGA.full.subset.ann)] > 0))
-```
 
-
-### Getting the quantiles 
-
-```{r}
-get_quants_from_null = function(null.list, sigs, paths, quant.lim) {
-
-    out.list = list()
-    
-    for (tissue in names(null.list)) {
-        
-        
-        tissue.elems = get_tissue_pathway_activities(tissue, sigs, paths)
-        
-        zero.mat = matrix(0, ncol = ncol(tissue.elems$paths),
-                          nrow = ncol(tissue.elems$sigs),
-                          dimnames = list(colnames(tissue.elems$sigs), 
-                                          sub("-", ".", sub(" ", ".", colnames(tissue.elems$paths) ) ) ) )
-        
-        quantiles.mat = do.call(rbind, 
-                                lapply(null.list[[tissue]], function(x) {
-                                    x = x[rowSums(is.na(x)) != ncol(x), colSums(is.na(x)) != nrow(x), drop = FALSE]
-                                    if(length(x) == 0) {
-                                        return(as.vector(zero.mat))
-                                    } else {
-                                        
-                                        out = zero.mat
-                                        out[rownames(x),colnames(x)] = out[rownames(x),colnames(x)] +
-                                            as.matrix(x)
-                                        return(as.vector(unlist(out)))
-                                    }
-                                    
-                                }
-                                ) )
-        quants = apply(quantiles.mat, MARGIN = 2, function(x)
-            quantile(abs(x), probs = quant.lim))    
-        
-        out = zero.mat + matrix(quants, nrow = nrow(zero.mat), ncol = ncol(zero.mat))
-        
-        out.list[[tissue]] = out
-    }
-    return(out.list)
-}
-
+TCGA.sig.path.nulls = readRDS(file = here("data/RDS/TCGA/10_onco_pathways",
+                                              "TCGA.sig.path.null.dists.RDS"))
 ```
 
 
@@ -277,44 +235,8 @@ ggsave(plot = all.path.sig.heatmap,
 
 <!-- ``` -->
 
-#### Fisher's exact test between signatures and pathways in individual tissues
 
-```{r, warning = FALSE}
-tissue.odds.ratio = sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
-                                 pathways.input = TCGA.pathways.tissues,
-                                 interaction_function = get_sig_path_assocs, 
-                                 path.min.tissues = 30,
-                                 p.val.threshold = 0.1,
-                                 p.adjust = TRUE,
-                                 method = "BH")
-```
-
-
-
-### Setting the null model for the OR
-
-```{r, echo = FALSE, include=FALSE}
-# tissue.odds.ratios.null = sig_pathway_int_null(sigs.input = TCGA.full.subset.ann.pathways,
-#                                  pathways.input = TCGA.pathways.tissues,
-#                                  interaction_function = get_sig_path_assocs,
-#                                  path.min.tissues = 30,
-#                                  p.val.threshold = 0.05,
-#                                  p.adjust = FALSE,
-#                                  method = "BH",
-#                                  N = 1000)
-# 
-# saveRDS(tissue.odds.ratios.null, file = file.path(out.dir, "TCGA.sig.path.OR.nulls.RDS"))
-tissue.odds.ratios.null = readRDS(file = file.path(out.dir, "TCGA.sig.path.OR.nulls.RDS"))
-```
-
-```{r}
-quant = 0.95
-tissue.OR.quantiles = get_quants_from_null(tissue.odds.ratios.null, 
-                                           TCGA.full.subset.ann.pathways,
-                                           TCGA.pathways.tissues, 
-                                           quant)
-```
-
+### Type of signature-pathway interactions in TCGA
 
 ```{r}
 tissue.odds.ratio.unadjusted = sig_pathway_int(
@@ -326,45 +248,211 @@ tissue.odds.ratio.unadjusted = sig_pathway_int(
     p.adjust = FALSE,
     method = "BH")
 
-tissue.odds.ratio.null.adjusted = setNames(
-    lapply(names(tissue.odds.ratio.unadjusted),
-           function(tissue) {
-               observed = tissue.odds.ratio.unadjusted[[tissue]]
-               colnames(observed) = sub("-", ".", sub(" ", ".", colnames(observed) ) )
-               nm = tissue.OR.quantiles[[tissue]]
-               nm = observed[rownames(observed), colnames(observed)]
-               
-               observed[abs(observed) < nm] = 0
-               return(observed)
-           }
-    ), names(tissue.odds.ratio.unadjusted) )
 
-for (tissue in names(tissue.odds.ratio.null.adjusted)) {
-   
-    if (any(abs(tissue.odds.ratio.unadjusted[[tissue]]) > 0) ) {
-        cat(tissue, "\n")
-        int.heatmap = ggheatmap_wrapper(tissue.odds.ratio.unadjusted[[tissue]], 
-                                        title = tissue)
-        
-        print(int.heatmap)
-        ggsave(plot = int.heatmap,
-               filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
-                                    paste0("TCGA_", tissue, "_sig_pathway_null_adjusted.dotplot.png")),
-               height = 5, width = 6, bg = "white")
-    }
+tissue.lm.coefs.mats.log = sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
+                                 pathways.input = TCGA.pathways.tissues,
+                                 interaction_function = get_sig_path_lms,
+                                 robust = FALSE,
+                                 path.min.tissues = 30,
+                                 p.val.threshold = 0.05,
+                                 p.adjust = FALSE,
+                                 method = "BH",
+                                 sig.log = TRUE,
+                                 path.to.sig = TRUE)
+
+tissue.log.coefs.mats.log = sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
+                                 pathways.input = TCGA.pathways.tissues,
+                                 interaction_function = get_sig_path_lms,
+                                 path.min.tissues = 30,
+                                 p.val.threshold = 0.05,
+                                 p.adjust = FALSE,
+                                 method = "BH",
+                                 sig.log = TRUE,
+                                 robust = FALSE,
+                                 path.to.sig = FALSE)
+# 
+# sig.path.int.funcs = list(
+#     OR = OR.func.null,
+#     STP = STP.null,
+#     PTS = PTS.null
+# )
+TCGA.sig.path.interactions = list()
+
+for (tissue in names(tissue.odds.ratio.unadjusted)) {
+    int.list = list(OR = tissue.odds.ratio.unadjusted[[tissue]],
+                    STP = tissue.log.coefs.mats.log[[tissue]],
+                    PTS = tissue.lm.coefs.mats.log[[tissue]])
+    TCGA.sig.path.interactions[[tissue]] = int.list
 }
+
+
+
 ```
+
+
+
+### Filter the interactions based on the null distributions
 
 ```{r}
-pp.odds.ratio.null.adjusted = plot_all_counts(tissue.odds.ratio.null.adjusted, 
-                                              threshold = 0.2, psize = 5,
-                                              expand.mult = c(0.08, 0.08))
+sig.threshold = 0.05
+TCGA.sig.path.interactions.significant = TCGA.sig.path.interactions
 
-ggsave(plot = pp.odds.ratio.null.adjusted,
+metric.name.mapping = list(OP = "Fisher's exact test",
+                           STP = "glm(pathway ~ signature)",
+                           PTS = "lm(signature ~ pathway)")
+
+out.file = here("supp_data", "TCGA.sig.pathway.significant.interactions.xlsx")
+file.remove(out.file)
+
+for(tissue in names(TCGA.sig.path.interactions)) {
+    
+    for (metric.name in names(TCGA.sig.path.interactions[[tissue]])) {
+        cat(tissue, "\t", metric.name, "\n")
+        out =  TCGA.sig.path.interactions[[tissue]][[metric.name]]
+        
+        if (length(out) == 0 ) {
+            next
+        }
+        metric.values = out %>% rm_zeros()
+        if (length(metric.values) == 0) {next} 
+        
+        p.values = matrix(NA, nrow = nrow(metric.values), 
+                          ncol = ncol(metric.values), 
+                          dimnames = (dimnames(metric.values)))
+        
+        non.zero.values = which(metric.values != 0, arr.ind = TRUE)
+        
+        for(i in 1:nrow(non.zero.values)) {
+            sig = rownames(metric.values)[non.zero.values[i, 1]]
+            path = colnames(metric.values)[non.zero.values[i, 2]]
+            
+            p.values[sig, path] = min(percentile(TCGA.sig.path.nulls[[tissue]][[metric.name]][sig, path, ] ,
+                                                  metric.values[sig, path]),
+                                      1 - percentile(TCGA.sig.path.nulls[[tissue]][[metric.name]][sig, path, ] ,
+                                                  metric.values[sig, path]))
+            
+            if(p.values[sig, path] > sig.threshold) {
+                out[sig, path] = 0
+                p.values[sig, path] = 1
+            }
+        }
+        TCGA.sig.path.interactions.significant[[metric.name]][[tissue]] = out
+        
+        
+        
+        if (!file.exists(out.file)) {
+            wb <- createWorkbook()
+            cat("File doesn't exist.\n")
+        } else { 
+            wb = loadWorkbook(out.file)
+        }
+        
+        if (!(tissue %in% names(wb))) {
+            cat("Sheet doesn't exist.\n")
+            addWorksheet(wb, tissue)
+            # writeData(wb = wb, 
+            #           sheet = tissue,
+            #           x = metric.name.mapping[[metric.name]])
+            start.row = 2
+        } else {
+            cat("Sheet exists.\n")
+            start.row = nrow(readWorkbook(out.file, 
+                                          sheet = tissue, 
+                                          colNames = FALSE, 
+                                          skipEmptyRows = FALSE))+5
+        }
+        
+        writeData(wb = wb, 
+                  sheet = tissue,
+                  x = metric.name.mapping[[metric.name]],
+                  colNames = TRUE,
+                  startRow = start.row - 1,
+                  startCol = 1) 
+        cat("File exists.\n")
+        
+        
+        cat(metric.name, "\t", start.row, "\n") 
+        
+        ### Write the metric values
+        writeData(wb = wb, 
+                  sheet = tissue,
+                  x = metric.values,
+                  colNames = TRUE,
+                  rowNames = TRUE,
+                  startRow = start.row)
+        
+        ### Write the p-values annotation
+        writeData(wb = wb, 
+                  sheet = tissue,
+                  x = "p-values",
+                  colNames = TRUE,
+                  startRow = start.row - 1,
+                  startCol = ncol(metric.values)+4) 
+        
+        ### Write the p-values matrix
+        
+        p.values =  ## replace NA's with 1 in upper.tri
+            pmin(1, p.values, na.rm = TRUE)
+        
+        writeData(wb = wb, 
+                  sheet = tissue,
+                  x = p.values,
+                  colNames = TRUE,
+                  rowNames = TRUE,
+                  startRow = start.row,
+                  startCol = ncol(metric.values)+4)
+        
+        saveWorkbook(wb, file = out.file, overwrite = TRUE)
+
+    }
+}
+
+
+saveRDS(TCGA.sig.path.interactions.significant, here("data/RDS/TCGA/10_onco_pathways",
+                                              "TCGA.sig.path.interactions.significant.RDS"))
+```
+
+
+```{r}
+pp.OR = plot_all_counts(lapply(TCGA.sig.path.interactions.significant, function(x) x$OR), 
+                                              threshold = 0.2, psize = 5,
+                                              expand.mult = c(0.13, 0.13))
+
+ggsave(plot = pp.OR,
                filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
                                     "TCGA_summarized_sig_pathway_null_adjusted.dotplot.pdf"),
-               height = 3, width = 4.2, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+               height = 2.4, width = 3.4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+
+
+
+
+
+pp.STP = plot_all_counts(lapply(TCGA.sig.path.interactions.significant, function(x) x$STP), 
+                         threshold = 0.1, psize = 6,
+                         expand.mult = c(0.03, 0.03))                         
+
+ggsave(plot = pp.STP,
+       filename = file.path(fig.dir, "signature_to_pathway",
+                            "by_tissues", "log_log",
+                            "TCGA_logged_logistic_summarized.null.adjusted.pdf"),
+       height = 2.8, width = 4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+
+
+
+
+pp.PTS = plot_all_counts(lapply(TCGA.sig.path.interactions.significant, function(x) x$PTS), 
+                         threshold = 0.2, psize = 5,
+                         expand.mult = c(0.1, 0.1))
+
+
+ggsave(plot = pp.PTS,
+               filename = file.path(fig.dir, "pathway_to_signature",
+                                    "by_tissues", "lm_log", "TCGA_logged_summarized_OLS_path_to_sigs.lm.null.adjusted.pdf"),
+               height = 2.7, width = 3.6, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+
+
 ```
+
 
 
 
@@ -383,7 +471,8 @@ ggsave(plot = sig.path.oddsratio.bipartite,
 ### Tissues of Odds ratio interactions
 
 ```{r}
-tissues.odds.ratio.lists = get_interaction_tissues(tissue.odds.ratio.unadjusted)
+tissues.odds.ratio.lists = get_interaction_tissues(
+    lapply(TCGA.sig.path.interactions.significant, function(x) x$OR))
 
 write.table(as.data.frame(tissues.odds.ratio.lists$pos.tissues), 
           file = here("supp_data", "TCGA_sig_pathway_positive_interaction_tissue_summaries.tsv"),
@@ -394,74 +483,31 @@ write.table(as.data.frame(tissues.odds.ratio.lists$neg.tissues),
 
 ```
 
-
-### Linear regression predicting signatures from pathways across tissues
-
-I tried logging the signatures before the linear regression or using raw counts.
-In this first case, I tried logging.
-
-
-```{r, warning = FALSE}
-tissue.lm.coefs.mats.log = sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
-                                 pathways.input = TCGA.pathways.tissues,
-                                 interaction_function = get_sig_path_lms,
-                                 robust = FALSE,
-                                 path.min.tissues = 30,
-                                 p.val.threshold = 0.05,
-                                 p.adjust = FALSE,
-                                 method = "BH",
-                                 sig.log = TRUE,
-                                 path.to.sig = TRUE)
-
-```
-
-
-### Setting the null model for the LM for sig ~ path
-
-```{r, echo = FALSE, include=FALSE}
-# tissue.lm.ratios.null = sig_pathway_int_null(sigs.input = TCGA.full.subset.ann.pathways,
-#                                  pathways.input = TCGA.pathways.tissues,
-#                                  interaction_function = get_sig_path_lms,
-#                                  robust = FALSE,
-#                                  path.min.tissues = 30,
-#                                  p.val.threshold = 0.05,
-#                                  p.adjust = FALSE,
-#                                  method = "BH",
-#                                  sig.log = TRUE,
-#                                  path.to.sig = TRUE,
-#                                  N = 1000)
-
-# saveRDS(tissue.lm.ratios.null, file = file.path(out.dir, "TCGA.sig.path.lm.nulls.RDS"))
-tissue.lm.ratios.null = readRDS(file = file.path(out.dir, "TCGA.sig.path.lm.nulls.RDS"))
-```
+#### Plotting the heatmaps
 
 ```{r}
-quant = 0.95
-tissue.lm.quantiles = get_quants_from_null(tissue.lm.ratios.null,
-                                           TCGA.full.subset.ann.pathways,
-                                           TCGA.pathways.tissues, 
-                                           quant)
-```
+tissue.odds.ratio.null.adjusted = lapply(TCGA.sig.path.interactions.significant, function(x)
+    x$OR)
+for (tissue in names(tissue.odds.ratio.null.adjusted)) {
+   
+    if (length(tissue.odds.ratio.null.adjusted[[tissue]]) == 0) {
+        next
+    }
+    if (any(abs(tissue.odds.ratio.null.adjusted[[tissue]]) > 0) ) {
+        cat(tissue, "\n")
+        int.heatmap = ggheatmap_wrapper(tissue.odds.ratio.null.adjusted[[tissue]], 
+                                        title = tissue)
+        
+        print(int.heatmap)
+        ggsave(plot = int.heatmap,
+               filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
+                                    paste0("TCGA_", tissue, "_sig_pathway_null_adjusted.dotplot.png")),
+               height = 5, width = 6, bg = "white")
+    }
+}
 
-### Applying the filter
-
-```{r}
-tissue.lm.null.adjusted = setNames(
-    lapply(names(tissue.lm.coefs.mats.log),
-           function(tissue) {
-               observed = tissue.lm.coefs.mats.log[[tissue]]
-               colnames(observed) = sub("-", ".", sub(" ", ".", colnames(observed) ) )
-               nm = tissue.lm.quantiles[[tissue]]
-               nm = observed[rownames(observed), colnames(observed)]
-               
-               observed[abs(observed) < nm] = 0
-               return(observed)
-           }
-    ), names(tissue.lm.coefs.mats.log) )
-```
-
-
-```{r}
+tissue.lm.null.adjusted = lapply(TCGA.sig.path.interactions.significant, function(x)
+    x$PTS)
 for (tissue in abundant.tissues) {
     cat(tissue, "\n")
     if (any(abs(tissue.lm.null.adjusted[[tissue]]) > 0) ) {
@@ -471,188 +517,15 @@ for (tissue in abundant.tissues) {
         ggsave(plot = int.heatmap,
                filename = file.path(fig.dir, "pathway_to_signature",
                                     "by_tissues", "lm_log",
-                                    paste0("TCGA_", tissue, "_sig_tilde_pathway.lm.null.adjusted.dotplot.png")),
+                                    paste0("TCGA_", tissue, "_sig_tilde_pathway.dotplot.png")),
                height = 5, width = 6, bg = "white")
     }
 }
-```
-
-
-#### Summarizing the regression of signatures ~ pathways
-
-```{r, fig.width=6, fig.height=4, warning= FALSE}
-pp.logged = plot_all_counts(tissue.lm.coefs.mats.log, threshold = 0.2, psize = 5,
-                            expand.mult = c(0.1, 0.1))
-print(pp.logged)
-
-# ggsave(plot = pp.logged,
-#                filename = file.path(fig.dir, "pathway_to_signature",
-#                                     "by_tissues", "lm_log",
-#                                     "TCGA_logged_summarized_OLS.png"),
-#                height = 2.3, width = 2.9, bg = "white")
-
-ggsave(plot = pp.logged,
-               filename = file.path(fig.dir, "pathway_to_signature",
-                                    "by_tissues", "lm_log", "TCGA_logged_summarized_OLS_path_to_sigs.lm.null.adjusted.pdf"),
-               height = 2.7, width = 3.6, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
-
-```
-
-
-<!-- ```{r, fig.width=6, fig.height=4, warning= FALSE} -->
-<!-- pp.logged.excl.melanoma = plot_all_counts( -->
-<!--     tissue.lm.coefs.mats.log[setdiff(names(tissue.lm.coefs.mats.log), "Skin_Melanoma")], -->
-<!--     threshold = 0.2, psize = 5) -->
-<!-- print(pp.logged.excl.melanoma) -->
-
-<!-- ggsave(plot = pp.logged.excl.melanoma, -->
-<!--                filename = file.path(fig.dir, "pathway_to_signature",  -->
-<!--                                     "by_tissues", "lm_log",  -->
-<!--                                     "TCGA_logged_summarized_OLS_excl_melanoma_path_to_sigs.png"), -->
-<!--                height = 2, width = 2.4, bg = "white") -->
-
-<!-- ggsave(plot = pp.logged.excl.melanoma, -->
-<!--                filename = file.path(fig.dir, "pathway_to_signature",  -->
-<!--                                     "by_tissues", "lm_log", "TCGA_logged_summarized_OLS_excl_melanoma_path_to_sigs.pdf"), -->
-<!--                height = 6, width = 8, bg = "white", device = cairo_pdf, family = "DejaVu Sans") -->
-
-<!-- ``` -->
-
-
-<!-- ### Case inspection of melanoma -->
-
-<!-- ```{r} -->
-<!-- tissue = "Skin_Melanoma" -->
-<!-- skin.data = get_tissue_pathway_activities(tissue,  -->
-<!--                                           sigs.input = TCGA.full.subset.ann.pathways, -->
-<!--                                           pathways.input = TCGA.pathways.tissues) -->
-
-<!-- skin.data$sigs.logged = skin.data$sigs %>%  -->
-<!--     mutate(across(.cols = everything(), ~ log(.x + 1 ))) -->
-
-<!-- skin.concat = merge(skin.data$sigs.logged, skin.data$paths, by = "row.names") -->
-
-
-<!-- uv.rtkras = skin.concat %>%  -->
-<!--     mutate (`RTK RAS` = factor(`RTK RAS`, levels = c(0, 1,2,3))) %>% -->
-<!--     ggplot(aes(x = `RTK RAS`, y = UV,  -->
-<!--                            group = `RTK RAS`, fill = `RTK RAS`) ) +  -->
-<!--     geom_boxplot() + geom_jitter(width = 0.15, height = 0.15) +  -->
-<!--     theme_bw(base_size = 13) +  -->
-<!--     ylab("log(UV)") -->
-
-<!-- print(uv.rtkras) -->
-
-<!-- ggsave(filename = file.path(fig.dir, paste0(tissue, "uv_rtkras_relationship.png")),  -->
-<!--        plot = uv.rtkras, width = 4, height = 3.2) -->
-
-
-<!-- rev.uv.rtkras = skin.concat %>%  -->
-<!--     mutate (`RTK RAS` = factor(`RTK RAS`, levels = c(0, 1,2,3))) %>% -->
-<!--     ggplot(aes(x = UV, y = `RTK RAS`) ) +  -->
-<!--     geom_jitter(width = 0.1, height = 0.15) +  -->
-<!--     theme_bw(base_size = 13) +  -->
-<!--     xlab("log(UV)") -->
-
-<!-- ggsave(filename = file.path(fig.dir, paste0(tissue, "rev_uv_rtkras_relationship.png")),  -->
-<!--        plot = rev.uv.rtkras, width = 4, height = 3.2) -->
-<!-- ``` -->
-
-
-<!-- ```{r} -->
-<!-- skin.hippo.apo = skin.concat %>%  -->
-<!--     ggplot(aes(x = factor(HIPPO), y = APOBEC,  -->
-<!--                             fill = factor(HIPPO) ) ) + -->
-<!--     theme_bw(base_size = 13) + -->
-<!--     geom_boxplot(outlier.shape = NA) +  -->
-<!--     geom_jitter(width = 0.2, height = 0.02) + -->
-<!--     geom_smooth(aes(group = 1),  -->
-<!--                     data = skin.concat, method = lm, se = FALSE) -->
-
-<!-- ggsave(filename = file.path(fig.dir, paste0(tissue, "_apobec_hippo_relationship.png")),  -->
-<!--        plot = skin.hippo.apo, width = 4, height = 3.2) -->
-<!-- ``` -->
 
 
 
-<!-- ```{r} -->
-<!-- skin.hippo.apo.rev = skin.concat %>%  -->
-<!--     ggplot(aes(x = APOBEC, y = HIPPO)) + -->
-<!--     theme_classic() +  -->
-<!--     scale_x_continuous(expand = c(0.2, 0.2)) +  -->
-<!--     geom_smooth(method = "glm",  -->
-<!--     method.args = list(family = "binomial"),  -->
-<!--     se = FALSE) + geom_jitter(aes(color = factor(HIPPO)), width = 0.1, height = 0.1) -->
-
-<!-- ggsave(filename = file.path(fig.dir, paste0(tissue, "_apobec_hippo_rev_relationship_logistic.png")),  -->
-<!--        plot = skin.hippo.apo.rev, width = 4, height = 3.2) -->
-<!-- ``` -->
-
-
-
-
-### Logistic regression getting pathways from signatures across tissues
-
-```{r}
-tissue.log.coefs.mats.log = sig_pathway_int(sigs.input = TCGA.full.subset.ann.pathways,
-                                 pathways.input = TCGA.pathways.tissues,
-                                 interaction_function = get_sig_path_lms,
-                                 path.min.tissues = 30,
-                                 p.val.threshold = 0.05,
-                                 p.adjust = FALSE,
-                                 method = "BH",
-                                 sig.log = TRUE,
-                                 robust = FALSE,
-                                 path.to.sig = FALSE)
-```
-
-
-### Null model for glm(pathway ~ signature)
-
-
-```{r, echo = FALSE, include=FALSE, warning = FALSE}
-tissue.glm.ratios.null = sig_pathway_int_null(sigs.input = TCGA.full.subset.ann.pathways,
-                                 pathways.input = TCGA.pathways.tissues,
-                                 interaction_function = get_sig_path_lms,
-                                 path.min.tissues = 30,
-                                 p.val.threshold = 0.05,
-                                 p.adjust = FALSE,
-                                 method = "BH",
-                                 sig.log = TRUE,
-                                 robust = FALSE,
-                                 path.to.sig = FALSE,
-                                 N = 1000)
-
-saveRDS(tissue.glm.ratios.null, file = file.path(out.dir, "TCGA.sig.path.glm.nulls.RDS"))
-# tissue.glm.ratios.null = readRDS(file = file.path(out.dir, "TCGA.sig.path.glm.nulls.RDS"))
-```
-
-```{r}
-quant = 0.95
-tissue.glm.quantiles = get_quants_from_null(tissue.glm.ratios.null,
-                                           TCGA.full.subset.ann.pathways,
-                                           TCGA.pathways.tissues, 
-                                           quant)
-```
-
-
-```{r}
-tissue.glm.null.adjusted = setNames(
-    lapply(names(tissue.log.coefs.mats.log),
-           function(tissue) {
-               observed = tissue.log.coefs.mats.log[[tissue]]
-               colnames(observed) = sub("-", ".", sub(" ", ".", colnames(observed) ) )
-               nm = tissue.glm.quantiles[[tissue]]
-               nm = observed[rownames(observed), colnames(observed)]
-               
-               observed[abs(observed) < nm] = 0
-               return(observed)
-           }
-    ), names(tissue.log.coefs.mats.log) )
-```
-
-
-```{r}
+tissue.glm.null.adjusted = lapply(TCGA.sig.path.interactions.significant, 
+                                  function(x) x$STP)
 for (tissue in abundant.tissues) {
     if (any(abs(tissue.glm.null.adjusted[[tissue]]) > 0) ) {
         cat(tissue, "\n")
@@ -667,27 +540,6 @@ for (tissue in abundant.tissues) {
     }
 }
 
-```
-
-
-#### Summarizing the regression of pathways ~ signatures
-
-```{r}
-pp.log.log = plot_all_counts(tissue.glm.null.adjusted, threshold = 0.1, psize = 6,
-                             expand.mult = c(0.03, 0.03))
-print(pp.log.log)
-
-# ggsave(plot = pp.log.log,
-#                filename = file.path(fig.dir, "signature_to_pathway",
-#                                     "by_tissues", "log_log",
-#                                     "TCGA_logged_summarized.png"),
-#                height = 1.15, width = 1.6, bg = "white")
-
-ggsave(plot = pp.log.log,
-               filename = file.path(fig.dir, "signature_to_pathway",
-                                    "by_tissues", "log_log",
-                                    "TCGA_logged_logistic_summarized.null.adjusted.pdf"),
-               height = 2.8, width = 4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
 ```
 
 ### Melanoma pathways
@@ -767,9 +619,9 @@ height = 5, width = 6, bg = "white")
 ### Three summaries together
 
 ```{r}
-pp.TCGA.combined.summaries = ggarrange(pp.odds.ratio.null.adjusted + ggtitle("Co-occurrence"), 
-          pp.logged + ggtitle("lm(signature ~ pathway)"), 
-          pp.log.log + ggtitle("glm(pathway ~ signature)"), 
+pp.TCGA.combined.summaries = ggarrange(pp.OR + ggtitle("Co-occurrence"), 
+          pp.PTS + ggtitle("lm(signature ~ pathway)"), 
+          pp.STP + ggtitle("glm(pathway ~ signature)"), 
           ncol = 1,
           heights = c(1, 1, 1))
 
@@ -780,4 +632,41 @@ pp.TCGA.combined.summaries = annotate_figure(
 ggsave(plot = pp.TCGA.combined.summaries,
                filename = file.path(fig.dir, "TCGA_combined_summaries_sig_pathway.pdf"),
                height = 10, width = 4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+```
+
+
+
+
+### All signatures and pathway mutation OR interaction heatmaps
+
+```{r}
+
+tissue.odds.ratio.adjusted = lapply(TCGA.sig.path.interactions.significant, 
+                                      function(x) x$OR)
+
+plotlist = list()
+for (tissue in abundant.tissues) {
+    path.heatmap = pathways_signatures_heatmap(
+        tissue = tissue,
+        signatures = TCGA.full.subset.ann.pathways, border_color = NA,
+        pathways = TCGA.pathways.tissues, main = tissue)
+    
+    if (any(abs(tissue.odds.ratio.adjusted[[tissue]]) > 0) ) {
+        cat(tissue, "\n")
+        int.heatmap = ggheatmap_wrapper(tissue.odds.ratio.adjusted[[tissue]], 
+                                        title = tissue)
+    } else {
+        int.heatmap = grob()
+    }
+    combined.out = ggarrange(path.heatmap[[4]], int.heatmap, widths = c(1, 1))
+    plotlist[[tissue]] = combined.out
+}
+
+
+pdf(file.path(fig.dir, "TCGA_pathways_signatures_heatmaps.pdf"),
+    width = 10, height = 4)
+for (tissue in names(plotlist)) {
+    print(plotlist[[tissue]])
+}
+dev.off()
 ```
