--- a/analysis/TCGA_sig_pathways_survivals.Rmd
+++ b/analysis/TCGA_sig_pathways_survivals.Rmd
@@ -12,10 +12,11 @@ knitr::opts_chunk$set(comment = '', fig.width = 6,
                       warning = FALSE)
 ```
 
-```{r load-packages}
+```{r load-packages, message=FALSE}
 library(here)
 library(survival)
 library(survminer)
+library(nonnestcox)
 
 source(here("R/load_packages.R"))
 library(gridExtra)
@@ -137,16 +138,17 @@ pos.coxlist = get_surv_coxlist(positive.sig.pathway,
 saveRDS(pos.coxlist, file = file.path(out.dir, "pos.coxlist.nototmut.nonbinary.RDS"))
 ```
 
-```{r}
+```{r, include = FALSE, warning = FALSE, message = FALSE}
 pos.picked.models = get_surv_best_model(positive.sig.pathway, 
                                  dataset = TCGA.path.sig.aggregate,
                                  clin.df = TCGA.clin.df,
                                  param.list = list(
                                      "with.total.muts" = c(TRUE, FALSE), 
                                      "tmb.logged" = c(TRUE),
-                                     "binary.status" = c(TRUE, FALSE) ),
+                                     "binary.status" = c(TRUE, FALSE),
+                                     "epistatic" = c(TRUE, FALSE)),
                                  min.sample.fraction = 0)
-saveRDS(pos.picked.models, file = file.path(out.dir, "tcga.pos.sig.path.picked.models.RDS"))
+saveRDS(pos.picked.models, file = file.path(out.dir, "tcga.pos.sig.path.picked.models.epi.RDS"))
 ```
 
 ### Survival models for negative interactions
@@ -227,9 +229,10 @@ neg.picked.models = get_surv_best_model(negative.sig.pathway,
                                  param.list = list(
                                      "with.total.muts" = c(TRUE, FALSE), 
                                      "tmb.logged" = c(TRUE),
-                                     "binary.status" = c(TRUE, FALSE) ),
+                                     "binary.status" = c(TRUE, FALSE),
+                                     "epistatic" = c(TRUE, FALSE)),
                                  min.sample.fraction = 0)
-saveRDS(neg.picked.models, file = file.path(out.dir, "tcga.neg.sig.path.picked.models.RDS"))
+saveRDS(neg.picked.models, file = file.path(out.dir, "tcga.neg.sig.path.picked.models.epi.RDS"))
 ```
 
 ### TCGA survival for specific interactions 
